[gd_scene load_steps=80 format=2]

[ext_resource path="res://Sprites/03-Pig/Run (34x28).png" type="Texture" id=1]
[ext_resource path="res://Sprites/03-Pig/Idle (34x28).png" type="Texture" id=2]
[ext_resource path="res://Script/ConmmonPig.gd" type="Script" id=3]
[ext_resource path="res://Scene/PlayerDetection.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/03-Pig/Attack (34x28).png" type="Texture" id=5]
[ext_resource path="res://Scene/DirectionHitBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene/HurtBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprites/03-Pig/Hit (34x28).png" type="Texture" id=8]
[ext_resource path="res://Scene/Stat.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sprites/03-Pig/Dead (34x28).png" type="Texture" id=10]
[ext_resource path="res://Scene/Dialog.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sprites/04-Pig Throwing a Box/Run (26x30).png" type="Texture" id=12]
[ext_resource path="res://Sprites/04-Pig Throwing a Box/Idle (26x30).png" type="Texture" id=13]
[ext_resource path="res://Sprites/04-Pig Throwing a Box/Picking Box (26x30).png" type="Texture" id=14]
[ext_resource path="res://Sprites/04-Pig Throwing a Box/Throwing Box (26x30).png" type="Texture" id=15]
[ext_resource path="res://Sprites/03-Pig/Jump (34x28).png" type="Texture" id=16]
[ext_resource path="res://Sprites/03-Pig/Fall (34x28).png" type="Texture" id=17]

[sub_resource type="RectangleShape2D" id=98]
extents = Vector2( 93, 10 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 68, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 102, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 136, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 170, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 204, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 238, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 272, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 306, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 2 )
region = Rect2( 340, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 1 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 1 )
region = Rect2( 68, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 102, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 136, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 170, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 13 )
region = Rect2( 26, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 13 )
region = Rect2( 52, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 13 )
region = Rect2( 78, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 13 )
region = Rect2( 104, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 13 )
region = Rect2( 130, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 13 )
region = Rect2( 156, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 13 )
region = Rect2( 182, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 13 )
region = Rect2( 208, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 8 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 15 )
region = Rect2( 26, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 15 )
region = Rect2( 52, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 15 )
region = Rect2( 78, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 15 )
region = Rect2( 104, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 136, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 68, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 102, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 5 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 37, 28 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 14 )
region = Rect2( 26, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 14 )
region = Rect2( 52, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 14 )
region = Rect2( 78, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 14 )
region = Rect2( 104, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 12 )
region = Rect2( 26, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 12 )
region = Rect2( 52, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 12 )
region = Rect2( 78, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 12 )
region = Rect2( 104, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 12 )
region = Rect2( 130, 0, 26, 30 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 10 )
region = Rect2( 34, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 10 )
region = Rect2( 68, 0, 34, 28 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 10 )
region = Rect2( 102, 0, 34, 28 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "Move",
"speed": 10.0
}, {
"frames": [ SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ) ],
"loop": true,
"name": "LiftBoxIdle",
"speed": 5.0
}, {
"frames": [ SubResource( 93 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ) ],
"loop": false,
"name": "Hit",
"speed": 10.0
}, {
"frames": [ SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ) ],
"loop": true,
"name": "ThrowBox",
"speed": 10.0
}, {
"frames": [ SubResource( 65 ), SubResource( 28 ), SubResource( 26 ), SubResource( 27 ), SubResource( 66 ), SubResource( 95 ) ],
"loop": false,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 92 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": true,
"name": "PickUpBox",
"speed": 10.0
}, {
"frames": [ SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ) ],
"loop": true,
"name": "LiftBoxMove",
"speed": 5.0
}, {
"frames": [ SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ) ],
"loop": false,
"name": "Die",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=57]
extents = Vector2( 8.5, 8.5 )

[sub_resource type="RectangleShape2D" id=60]
extents = Vector2( 7, 8.5 )

[sub_resource type="RectangleShape2D" id=97]
extents = Vector2( 9.25, 8 )

[sub_resource type="RectangleShape2D" id=94]
extents = Vector2( 10.5, 5.5 )

[node name="CommonPig" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 3 )

[node name="PlayerDetection" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDetection/PlayerDetectionZone" index="0"]
position = Vector2( -54, 0.5 )
shape = SubResource( 98 )

[node name="Dialog" parent="." instance=ExtResource( 11 )]
position = Vector2( 3, -12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -16, -18 )
scale = Vector2( 0.911765, 1 )
frames = SubResource( 18 )
animation = "Idle"
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.5, 0.5 )
shape = SubResource( 57 )

[node name="EnemyStat" parent="." instance=ExtResource( 9 )]
visible = false
health = 2
max_health = 2

[node name="HurtBox" parent="." instance=ExtResource( 7 )]
visible = false
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -1, 0.5 )
shape = SubResource( 60 )

[node name="HitBox" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="HitBox/Position2D" index="0"]
position = Vector2( 15, 0 )
shape = SubResource( 97 )

[node name="WanderTimer" type="Timer" parent="."]

[node name="WallDectctionZone" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDectctionZone"]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 94 )

[connection signal="body_entered" from="PlayerDetection/PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetection/PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="animation_finished" from="Dialog/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="no_health" from="EnemyStat" to="." method="_on_EnemyStat_no_health"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="HitBox/Position2D/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
[connection signal="body_entered" from="WallDectctionZone" to="." method="_on_WallDectctionZone_body_entered"]

[editable path="PlayerDetection"]
[editable path="Dialog"]
[editable path="HurtBox"]
[editable path="HitBox"]
